bugfix: strip process.env from env.example

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@
 # TAVILY_API_KEY="..."
 
 # Optional, add tracing in LangSmith
-# process.env.LANGCHAIN_API_KEY = "ls__...";
-# process.env.LANGCHAIN_CALLBACKS_BACKGROUND = "true";
-# process.env.LANGCHAIN_TRACING_V2 = "true";
-# process.env.LANGCHAIN_PROJECT = "Deno Deep Researcher";
+# LANGCHAIN_API_KEY = "ls__...";
+# LANGCHAIN_CALLBACKS_BACKGROUND = "true";
+# LANGCHAIN_TRACING_V2 = "true";
+# LANGCHAIN_PROJECT = "Deno Deep Researcher";
