--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,12 @@
 {
   "tasks": {
-    "dev": "deno run --watch main.ts"
+    "dev": "deno run --watch main.ts",
+    "test": "deno test --allow-env --allow-net",
+    "test:watch": "deno test --watch --allow-env --allow-net",
+    "lint": "deno lint",
+    "fmt": "deno fmt",
+    "fmt:check": "deno fmt --check",
+    "check": "deno check **/*.ts"
   },
   "imports": {
     "@langchain/community": "npm:@langchain/community@^0.3.34",
