update env example

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@
 
 # Optional, add tracing in LangSmith
 # LANGCHAIN_API_KEY = "ls__...";
+# LANGSMITH_API_KEY = "ls...";
 # LANGCHAIN_CALLBACKS_BACKGROUND = "true";
 # LANGCHAIN_TRACING_V2 = "true";
 # LANGCHAIN_PROJECT = "Deno Deep Researcher";
