--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # Required
 # OPENAI_API_KEY="sk-..."
-# TAVILY_API_KEY="..."
+# TAVILY_API_KEY="tvly-..."
 
 # Optional, add tracing in LangSmith
 # LANGCHAIN_API_KEY = "ls__...";
