feat: Add OpenTelemetry instrumentation to Tavily search service
- Update .env.example with OpenTelemetry configuration options
- Add OpenTelemetry API dependency in deno.lock
- Enhance Tavily search service with tracing, logging, and metrics
- Implement error handling and performance tracking

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,8 @@
 # LANGCHAIN_CALLBACKS_BACKGROUND = "true";
 # LANGCHAIN_TRACING_V2 = "true";
 # LANGCHAIN_PROJECT = "Deno Deep Researcher";
+
+# Open Telemetry
+# OTEL_DENO = "true"
+# OTEL_SERVICE_NAME = "Deno Deep Researcher"
+# OTEL_RESOURCE_ATTRIBUTES = "deployment.environment=development"
